--- a/index.html
+++ b/index.html
@@ -91,10 +91,36 @@ layout: homepage
 				</a>
 				<div class="caption">
 					<h1>Hassan Mead</h1>
-					<h3>NCAA 3000m Champion</h3>
+					<h3>Olympian, Big Ten Champion, All-American</h3>
 					<p>This is more than just sports.</p>
 					<ul class="actions fixed">
 						<li><a href="/screens/testimonials/hassanmead.html" class="button small">Read More</a></li>
+					</ul>
+				</div>
+			</article>
+			<article>
+				<a href="/screens/testimonials/hassanmead.html" class="image">
+					<img src="/images/testimonials/dlarance.jpg" alt="" />
+				</a>
+				<div class="caption">
+					<h1>Dawson LaRance</h1>
+					<h3>NCAA All-American</h3>
+					<p>Finding LGBTQ+ Inclusivity in the Men's T&F Program</p>
+					<ul class="actions fixed">
+						<li><a href="/screens/testimonials/dawsonlarance.html" class="button small">Read More</a></li>
+					</ul>
+				</div>
+			</article>
+			<article>
+				<a href="/screens/testimonials/hassanmead.html" class="image">
+					<img src="/images/testimonials/choeft.jpg" alt="" />
+				</a>
+				<div class="caption">
+					<h1>Carson Hoeft</h1>
+					<h3>NCAA All-American</h3>
+					<p>To imagine the University of Minnesota without a Track and Field program disheartens me to the core.</p>
+					<ul class="actions fixed">
+						<li><a href="/screens/testimonials/carsonhoeft.html" class="button small">Read More</a></li>
 					</ul>
 				</div>
 			</article>
@@ -140,7 +166,7 @@ layout: homepage
 			<h3>If you would like to offer skills, connections, ideas, or words of support</h3>
 			<h2>Please get in touch</h2>
 			<h3>Your emails will be treated carefully, and with great respect.</h3>
-			<p>Alternatively, email us at <a href="mailto: savegophertf@gmail.com" target="_blank">savegopherctf@gmail.com</a>.</p>
+			<p>Alternatively, email us at <a href="mailto: savegophertf@gmail.com" target="_blank">savegophertf@gmail.com</a>.</p>
 			<form action="https://liveformhq.com/form/9ef3e70b-28c1-44de-9c0c-bb7487bad22d" method="POST" accept-charset="utf-8">
 				<input type="hidden" name="_utf8" value="✓">
 
