--- a/screens/testimonials/dawsonlarance.html
+++ b/screens/testimonials/dawsonlarance.html
@@ -1,7 +1,8 @@
 ---
 title: "#SaveGopherTF Dawson LaRance"
-layout: athlete_testimonial
+layout: spotlight_testimonial
 fullname: "Dawson LaRance, '21 Mid-D"
+description: "NCAA All-American"
 quote: "Finding LGBTQ+ Inclusivity in the Men's T&F Program"
 image: "/images/testimonials/dlarance.jpg"
 ---
