--- a/screens/testimonials/hassanmead.html
+++ b/screens/testimonials/hassanmead.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Hassan Mead"
 layout: spotlight_testimonial
-description: placeholder
+description: "Olympian, Big Ten Champion, All-American"
 fullname: "Hassan Mead, '12 Distance/XC"
 quote: "This is more than just sports. "
 image: "/images/testimonials/hmead.jpg"
@@ -10,16 +10,17 @@ image: "/images/testimonials/hmead.jpg"
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
     <div class="content" id="full">
         <p>
-            I grown up South Minneapolis about 4 blocks from where the Gopher Football team’s TCF Bank Stadium is built now. As neighbor to the U of Minnesota I have first hand seen how the community grew in the last two
-            decades in both infrastructure and community leaders.
-            <br><br>
-            Long before I knew I was in heart of the community as I attend at the U of Minnesota for full athletic scholarship to represent the Golden Gophers in Cross Country, indoor and Outdoor track and field. This opportunity lead to 9 time Big10
-            individual titles , 8 time All-American and 6 time Big10 Team title. All accolades aside, it’s very difficult to put measurement on the experience and community relationship that the University of Minnesota provided to me. This program
-            allows young inner city like myself to see the world in a way that’s unmeasurable. All I want is the future generation to have access and chance like I had and the ones that came before.
-            <br><br>
+            My name is Hassan Mead, I grew up in South Minneapolis about four blocks from where the Gopher Football team’s TCF Bank Stadium was built. As a neighbor to the University of Minnesota, I have seen firsthand how the community has grown and
+            changed over the past two decades, in both infrastructure and community leaders.
+            <br></br>
+            I attended the University of Minnesota on full athletic scholarship representing the Golden Gophers in Cross Country, and indoor and outdoor Track and Field. This opportunity led to nine Big10 individual titles, six Big10 Team titles and
+            to being an eight-time All-American. All accolades aside, it is very difficult to put measurement on the experience and community relationship that the University of Minnesota provided to me. This program allows young inner city like me
+            to see the world in a way that’s unmeasurable. All I want is for future generations to have this same access and chance as I and so many others were so fortunate to have.
+            <br></br>
             I hope that you can find in your heart that it’s unjustifiable to terminate this program and void the U of Minnesota’s decision.
-            <br><br>
-            Thank you.
+            <br></br>
+            Thank you
+            Hassan.
         </p>
     </div>
 </section>
