fix talking points

--- a/screens/talking_points.html
+++ b/screens/talking_points.html
@@ -14,9 +14,9 @@ layout: base
 
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 	<div class="content">
-		<ol class="d">
+		<ul class="alt">
 			<li><b>Minnesota Track and Field has a legacy of excellence on and off the Oval.</b></li>
-			<ol class="a">
+			<ul>
 				<li>
 					University of Minnesota Men’s Track and Field has existed for over 120 years as a core program in the University of Minnesota athletic department and has a storied legacy. It has produced 14 Olympians ranging from three-time
 					Olympian Fortune Gordien in the 1940’s and 50’s to 2016 Rio Olympic Athletes Hassan Mead and Ben Blankenship. Minnesota’s Mead and Blankenship comprised 10% of the Olympic Distance Running squad in 2016, both made the Olympic
@@ -33,11 +33,11 @@ layout: base
 					Minnesota Men’s Track and Field has a record of outstanding Academic performance. During the 2020 Indoor Season the U.S. Track and Field Coaches Association awarded 16 Gopher Track and Field Athletes All-Academic Honors, which led
 					the nation. The cumulative GPA for the Men’s Team in spring 2020 was 3.26.
 				</li>
-			</ol>
+			</ul>
 			<li>
 				<b>Eliminating opportunities looks like a planned exercise by the current Athletic Administration over several years.</b>
 			</li>
-			<ol class="a">
+			<ul>
 				<li>
 					Since Mark Coyle was hired in June 2016, there has been a steady reduction of women’s opportunities which may have created the Title IX problem used to justify the elimination of men’s programs.
 				</li>
@@ -50,7 +50,7 @@ layout: base
 				</li>
 				<li>
 					The Athletic Department has caused this gender imbalance and could alleviate the issue by providing more opportunities to female student athletes instead of eliminating men’s opportunities. This is the intent of Title IX –
-					creating opportunities for women, not eliminating them for me.
+					creating opportunities for women, not eliminating them for men.
 				</li>
 				<li>
 					If the proposal passes to eliminate Men’s Track and Field (Men’s Gymnastics and Tennis too), men’s participants will drop to 291, forcing the athletic department to eliminate 78 additional women’s opportunities to maintain the
@@ -62,11 +62,11 @@ layout: base
 				<li>
 					Eliminating non-revenue sports reduces University tuition revenues annually and discourages alumni from donating and supporting permanently.
 				</li>
-			</ol>
+			</ul>
 			<li>
 				<b>As Minnesota’s land-grant institution, the University of Minnesota has a special obligation to offer a full spectrum of opportunities for all Minnesotans.</b>
 			</li>
-			<ol class="a">
+			<ul>
 				<li>
 					The current Men’s Track and Field Program is the most diverse Men’s Athletic Team at the University of Minnesota from an international, domestic and ethnic composition.
 				</li>
@@ -74,7 +74,8 @@ layout: base
 					People of color represent 25% of Men’s Track and Field Team. Over 50% of the Men’s Track and Field scholarships are invested in people of color.
 				</li>
 				<li>
-					Currently, two East Africans student athletes are on the Minnesota Men’s Track and Field team, the only two in the entire University Athletic Department. Minnesota has one of the largest East African communities in the country.
+					Currently, two East Africans student athletes are on the Minnesota Men’s Track and Field team, the only two in the entire University Athletic Department. Minnesota has one of the largest East African communities in the
+					country.
 				</li>
 				<li>
 					Over 80% of student athletes of color will be eliminated from Minnesota non-revenue men’s athletic teams if Track and Field is eliminated.
@@ -85,26 +86,29 @@ layout: base
 				<li>
 					Boys Track and Field is the fastest growing sport in the country due to its broad appeal and reasonable participation costs.
 				</li>
-			</ol>
+			</ul>
 			<li><b>Division I Athletic Business models are broken; non-revenue sports are a casualty of failed Athletic Department funding strategies.</b></li>
-			<ol class="a">
+			<ul>
 				<li>
-					It is a known fact that Division I Athletic Departments are financially strapped across the country. Athletic business models have been relying on football and basketball to fund the Athletic Department. Between Joel Maturi’s and
+					It is a known fact that Division I Athletic Departments are financially strapped across the country. Athletic business models have been relying on football and basketball to fund the Athletic Department. Between Joel Maturi’s
+					and
 					Mark Coyle’s tenure, the Minnesota Athletic budget has grown from approximately $60 million to over $120 million but nevertheless has continued to cut programs and athlete numbers.
 				</li>
 				<li>
-					Cutting Men’s Track and Field does not solve the larger issue of athletic funding at Minnesota. The cost savings associated with eliminating Men’s Track and Field is calculated at $630,362 or about 0.48% of the Athletic Department
+					Cutting Men’s Track and Field does not solve the larger issue of athletic funding at Minnesota. The cost savings associated with eliminating Men’s Track and Field is calculated at $630,362 or about 0.48% of the Athletic
+					Department
 					Revenue for 2019 and comprises only 0.84% of the predicted $75 million Athletic Department COVID-19 related shortfall.
 				</li>
 				<li>
 					The Big Ten Conference has reinstated the football season, which will significantly alter the $75 million shortfall.
 				</li>
 				<li>
-					Between November 2019 and February 2021, Minnesota will have increased the football salary pool by $2.4 million, $400,000 more than the projected savings from permanently eliminating Track and Field and the other eliminated Men’s
+					Between November 2019 and February 2021, Minnesota will have increased the football salary pool by $2.4 million, $400,000 more than the projected savings from permanently eliminating Track and Field and the other eliminated
+					Men’s
 					non-revenue sports.
 				</li>
-			</ol>
-		</ol>
+			</ul>
+		</ul>
 		<ul class="actions stacked">
 			<li><a href="/index.html#theissue" class="button big wide smooth-scroll-middle">Back Home</a></li>
 		</ul>
