--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: homepage
 	</div>
 	<div class="content">
 		<h1 class="landing-headline">
-			Save
+			SAVE
 			<br>
-			Gopher
+			GOPHER
 			<br>
-			Track and Field
+			TRACK AND FIELD
 		</h1>
 		<ul class="actions">
 			<li><a href="#theissue" class="button wide smooth-scroll-top-navbar-offset"><b>Learn More</b></a></li>
