add rest of staff

--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -199,6 +199,30 @@ layout: base
                     <td>vande104@umn.edu</td>
                     <td />
                 </tr>
+                <tr>
+                    <td>Kate Stuckert</td>
+                    <td>Senior Assistant to the President</td>
+                    <td>stuck005@umn.edu</td>
+                    <td />
+                </tr>
+                <tr>
+                    <td>Angie Pesch</td>
+                    <td>Office Manager</td>
+                    <td>apesch@umn.edu</td>
+                    <td />
+                </tr>
+                <tr>
+                    <td>Penny Bellesen</td>
+                    <td>Executive Assistant</td>
+                    <td>pennyb@umn.edu</td>
+                    <td />
+                </tr>
+                <tr>
+                    <td>Eve Wolf</td>
+                    <td>Correspondence Manager</td>
+                    <td>eve@umn.edu</td>
+                    <td />
+                </tr>
             </tbody>
         </table>
 
