--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ layout: homepage
 	</div>
 	<div class="content">
 		<h1 class="landing-headline">
-			SAVE
-			<br>
-			GOPHER
+			SAVE GOPHER
 			<br>
 			TRACK AND FIELD
 		</h1>
