fix big buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: homepage
 			TRACK AND FIELD
 		</h1>
 		<ul class="actions">
-			<li><a href="#theissue" class="button wide smooth-scroll-top-navbar-offset"><b>Learn More</b></a></li>
-			<li><a href="screens/take_action.html" class="button wide smooth-scroll-top-navbar-offset"><b>Take Action</b></a></li>
+			<li><a href="#theissue" class="button large wide smooth-scroll-top-navbar-offset"><b>Learn More</b></a></li>
+			<li><a href="screens/take_action.html" class="button large wide smooth-scroll-top-navbar-offset"><b>Take Action</b></a></li>
 		</ul>
 	</div>
 </section>
@@ -34,7 +34,7 @@ layout: homepage
 				Please view our full statement with irrefutable talking points on this factually misleading proposal.
 			</p>
 			<ul class="actions stacked">
-				<li><a href="screens/talking_points.html" class="button">Read Our Talking Points</a></li>
+				<li><a href="screens/talking_points.html" class="button large">Read Our Talking Points</a></li>
 			</ul>
 		</div>
 		<div class="image">
@@ -56,7 +56,7 @@ layout: homepage
 				<li>Work hand-in-hand with our supporters to pursue an alternative and more innovative athletic funding model to create sustainability.</li>
 			</ol>
 			<ul class="actions stacked">
-				<li><a href="screens/take_action.html" class="button">Take Action</a></li>
+				<li><a href="screens/take_action.html" class="button large">Take Action</a></li>
 			</ul>
 		</div>
 	</section>
