--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -7,7 +7,7 @@ layout: base
     <div class="content">
         <h1>Take Action</h1>
         <ul class="actions stacked">
-            <li><a href="#regents" class="button big wide smooth-scroll-middle">See Regents List</a></li>
+            <li><a href="#regents" class="button big wide smooth-scroll-top">See Regents List</a></li>
             <li><a href="/index.html#joinus" class="button big wide smooth-scroll-middle">Back Home</a></li>
         </ul>
     </div>
@@ -35,9 +35,10 @@ layout: base
             Like, share and comment on our content to increase visibility. Post on Instagram, Facebook, and Twitter with the hashtag #savegophertf to voice your opinion about this decision.
 
         </p>
-        <h3>Contact the regents</h3>
+        <h3 id="regents">Contact the regents</h3>
         <p>
-            The Board of Regents are the main group we are attempting to educate. The Board of Regents will decide whether to approve the proposal to cut Men’s Track and Field on October 9, 2020 at their Full Board Meeting, beginning around 9 am CST.
+            The Board of Regents are the main group we are attempting to educate. The Board of Regents will decide whether to approve the proposal to cut Men’s Track and Field on October 9, 2020 at their Full Board Meeting, beginning around 9 am
+            CST.
             We need 6 or more of the 12 Regents to vote against the proposal.
 
             The 12 members of the Board of Regents articulate a vision for the University and works to ensure the University of Minnesota fulfills its mission of education, research, and outreach. They are a volunteer civilian board and serve
@@ -47,7 +48,8 @@ layout: base
                 CC
                 <a href="mailto:savegophertf@gmail.com">savegophertf@gmail.com</a></b> so we can keep a record of sent emails and responses. Feel free to forward any responses already received to this email address.
             <br><br>
-            Some Regents have direct phone numbers listed, while others use the general phone number: 612.624.6608. You can leave an individual message at the general number.<b>IMPORTANT: You must say that you are calling for “Regent [Name]” – then
+            Some Regents have direct phone numbers listed, while others use the general phone number: 612.624.6608. You can leave an individual message at the general number.<b>IMPORTANT: You must say that you are calling for “Regent [Name]” –
+                then
                 your actual audio message will be forwarded directly to that individual regent.</b> Otherwise it will be noted and shared as part of a staff summary.
         </p>
 
@@ -56,7 +58,7 @@ layout: base
                     target="_blank" class="button big wide smooth-scroll-middle">Email all regents</a></li>
         </ul>
 
-        <table id="regents">
+        <table>
             <thead>
                 <tr>
                     <th>Name</th>
@@ -154,18 +156,19 @@ layout: base
             </tbody>
         </table>
 
-        <h3>Contact the President</h3>
+        <h3 id="staff">Contact the President</h3>
         <p>
             The Board of Regents establishes a framework for the President to achieve that vision. President Gabel reports directly to them. She oversees all aspects of the University operations, including the Athletic Department.
             Below is a contact list for the President of the University and her key staff. <a href="https://president.umn.edu/about/president-staff">See all staff here</a>.
         </p>
 
         <ul class="actions stacked">
-            <li><a href="mailto:upres@umn.edu,haldeman@umn.edu,keen0113@umn.edu,vande104@umn.edu,stuck005@umn.edu,pennyb@umn.edu,eve@umn.edu,apesch@umn.edu,savegophertf@gmail.com" target="_blank" class="button big wide smooth-scroll-middle">Email all
+            <li><a href="mailto:upres@umn.edu,haldeman@umn.edu,keen0113@umn.edu,vande104@umn.edu,stuck005@umn.edu,pennyb@umn.edu,eve@umn.edu,apesch@umn.edu,savegophertf@gmail.com" target="_blank" class="button big wide smooth-scroll-middle">Email
+                    all
                     staff</a></li>
         </ul>
 
-        <table id="staff">
+        <table>
             <thead>
                 <tr>
                     <th>Name</th>
