--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -7,8 +7,8 @@ layout: base
     <div class="content">
         <h1>Take Action</h1>
         <ul class="actions stacked">
-            <li><a href="#regents" class="button big wide smooth-scroll-top">See Regents List</a></li>
-            <li><a href="/index.html#joinus" class="button big wide smooth-scroll-middle">Back Home</a></li>
+            <li><a href="#regents" class="button wide smooth-scroll-top">See Regents List</a></li>
+            <li><a href="/index.html#joinus" class="button wide smooth-scroll-middle">Back Home</a></li>
         </ul>
     </div>
 </section>
