--- a/screens/athletes.html
+++ b/screens/athletes.html
@@ -21,7 +21,7 @@ layout: base
 		</div>
 	</div>
 	<div class="image">
-		<img src="/images/alumni.png" alt="" />
+		<img src="/images/athletes.jpg" alt="" />
 	</div>
 </section>
 <section class="wrapper style1 align-center" id="all">
