upload a bunch of testimonials

--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -363,13 +363,193 @@ layout: base
 				</ul>
 			</div>
 		</article>
+		<article>
+			<a href="/screens/testimonials/richardsimonsen.html" class="image">
+				<img src="/images/testimonials/rsimonsen.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Richard Simonsen</h3>
+				<p>Gopher athlete helps team win Big 10 team championship!</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/richardsimonsen.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/jeffsvedahl.html" class="image">
+				<img src="/images/testimonials/jsvedahl.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Jeff Svedahl</h3>
+				<p>What does being a UMN Track and Field team member mean to me?</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/jeffsvedahl.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/danhebl.html" class="image">
+				<img src="/images/testimonials/dhebl.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Dan Hebl</h3>
+				<p>Worth the investment!</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/danhebl.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/jonathankorta.html" class="image">
+				<img src="/images/testimonials/jkorta.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Jonathan Korta</h3>
+				<p>We deserve better</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/jonathankorta.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/tommccaffrey.html" class="image">
+				<img src="/images/testimonials/tmccaffrey.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Tom McCaffrey</h3>
+				<p>Old Proud Gopher</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/tommccaffrey.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/jaybottelson.html" class="image">
+				<img src="/images/testimonials/jbottelson.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Jay Bottelson</h3>
+				<p>Track and Field for Athletes and more</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/jaybottelson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/aliciarue.html" class="image">
+				<img src="/images/testimonials/arue.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Alicia Rue</h3>
+				<p>College T&F is key to athletes future </p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/aliciarue.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/carlyemilgatzlaff.html" class="image">
+				<img src="/images/testimonials/cemilgatzlaff.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Carly Emil-Gatzlaff</h3>
+				<p>Family</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/carlyemilgatzlaff.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/davecasale.html" class="image">
+				<img src="/images/testimonials/dcasale.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Dave Casale</h3>
+				<p>Too much good has come from this program</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/davecasale.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/seandonnelly.html" class="image">
+				<img src="/images/testimonials/sdonnelly.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Sean Donnelly</h3>
+				<p>Opportunities will be lost</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/seandonnelly.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/andrewbunge.html" class="image">
+				<img src="/images/testimonials/abunge.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Andrew Bunge</h3>
+				<p>Life Changing University Experience</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/andrewbunge.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/seanolson.html" class="image">
+				<img src="/images/testimonials/solson.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Sean Olson</h3>
+				<p>A Dream Come True</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/seanolson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/samcarlson.html" class="image">
+				<img src="/images/testimonials/scarlson.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Sam Carlson</h3>
+				<p>Following My Parents Footsteps</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/samcarlson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/lauradocherty.html" class="image">
+				<img src="/images/testimonials/ldocherty.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Laura Docherty</h3>
+				<p>It’s about a family of athletes that go on to dedicate our whole selves to our craft no matter what area of life we fall into after college.</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/lauradocherty.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/kevinmoorhead.html" class="image">
+				<img src="/images/testimonials/kmoorhead.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Kevin Moorhead</h3>
+				<p>Let's keep the U's integrity to the world intact.</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/kevinmoorhead.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
 	</div>
 
 </section>
 <section class="wrapper style1 align-center" id="home">
 	<div class="inner">
 		<ul class="actions stacked">
-			<li><a href="../index.html#community" class="button big wide smooth-scroll-middle">Back Home</a></li>
+			<li><a href="/index.html#community" class="button big wide smooth-scroll-middle">Back Home</a></li>
 		</ul>
 	</div>
 </section>
