--- a/screens/athletes.html
+++ b/screens/athletes.html
@@ -172,7 +172,7 @@ layout: base
 				</ul>
 			</div>
 		</article>
-		<article>
+		<!-- <article>
 			<a href="/screens/testimonials/dillonblake.html" class="image">
 				<img src="/images/testimonials/dblake.jpg" alt="" />
 			</a>
@@ -183,8 +183,8 @@ layout: base
 					<li><a class="button small" href="/screens/testimonials/dillonblake.html">Read More</a></li>
 				</ul>
 			</div>
-		</article>
-		<article>
+		</article> -->
+		<!-- <article>
 			<a href="/screens/testimonials/courtneywest.html" class="image">
 				<img src="/images/testimonials/cwest.jpg" alt="" />
 			</a>
@@ -195,8 +195,8 @@ layout: base
 					<li><a class="button small" href="/screens/testimonials/courtneywest.html">Read More</a></li>
 				</ul>
 			</div>
-		</article>
-		<article>
+		</article> -->
+		<!-- <article>
 			<a href="/screens/testimonials/abbykohutjackson.html" class="image">
 				<img src="/images/testimonials/akohutjackson.jpg" alt="" />
 			</a>
@@ -207,8 +207,79 @@ layout: base
 					<li><a class="button small" href="/screens/testimonials/akohutjackson.html">Read More</a></li>
 				</ul>
 			</div>
+		</article> -->
+		<article>
+			<a href="/screens/testimonials/austinstreit.html" class="image">
+				<img src="/images/testimonials/astreit.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Austin Streit</h3>
+				<p>Adversity, Determination, Character, Relationships</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/austinstreit.html">Read More</a></li>
+				</ul>
+			</div>
 		</article>
-
+		<article>
+			<a href="/screens/testimonials/mollyroach.html" class="image">
+				<img src="/images/testimonials/mroach.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Molly Roach</h3>
+				<p>Minnesota is better than this</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/mollyroach.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/anastasiakorzenowski.html" class="image">
+				<img src="/images/testimonials/akorzenowski.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Anastasia Korzenowski</h3>
+				<p>Track is where I found my home</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/anastasiakorzenowski.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/tatesweeney.html" class="image">
+				<img src="/images/testimonials/tsweeney.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Tate Sweeney</h3>
+				<p>We are Family</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/tatesweeney.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/sammibaer.html" class="image">
+				<img src="/images/testimonials/sbaer.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Sammi Baer</h3>
+				<p>Successful because we are UNITED - One Team</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/sammibaer.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/elizabethhalbmaier.html" class="image">
+				<img src="/images/testimonials/ehalbmaier.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Elizabeth Halbmaier</h3>
+				<p>We are one team, one family, and without half our family, the women will feel empty</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/elizabethhalbmaier.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
 	</div>
 
 </section>
