--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -351,7 +351,7 @@ layout: base
 				</ul>
 			</div>
 		</article>
-		<article>
+		<!-- <article>
 			<a href="/screens/testimonials/ryanmalmin.html" class="image">
 				<img src="/images/testimonials/rmalmin.jpg" alt="" />
 			</a>
@@ -362,7 +362,7 @@ layout: base
 					<li><a class="button small" href="/screens/testimonials/ryanmalmin.html">Read More</a></li>
 				</ul>
 			</div>
-		</article>
+		</article> -->
 		<article>
 			<a href="/screens/testimonials/richardsimonsen.html" class="image">
 				<img src="/images/testimonials/rsimonsen.jpg" alt="" />
