--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -364,6 +364,18 @@ layout: base
 			</div>
 		</article>
 		<article>
+			<a href="/screens/testimonials/kieranmckeag.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Kieran McKeag</h3>
+				<p>Track and Field is for the Betterment of Society!</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/kieranmckeag.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
 			<a href="/screens/testimonials/rileymacon.html" class="image">
 				<img src="/images/testimonials/rmacon.jpg" alt="" />
 			</a>
@@ -460,6 +472,18 @@ layout: base
 			</div>
 		</article>
 		<article>
+			<a href="/screens/testimonials/connorolson.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Connor Olson</h3>
+				<p>Enable Dreams, Don't Disable Teams</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/connorolson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
 			<a href="/screens/testimonials/danhebl.html" class="image">
 				<img src="/images/testimonials/dhebl.jpg" alt="" />
 			</a>
@@ -516,6 +540,18 @@ layout: base
 				<p>College T&F is key to athletes future </p>
 				<ul class="actions fixed">
 					<li><a class="button small" href="/screens/testimonials/aliciarue.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/kimklingelhutz.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Kim Klingelhutz</h3>
+				<p>What would Coach Griak think?</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/kimklingelhutz.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
