--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -424,6 +424,18 @@ layout: base
 			</div>
 		</article>
 		<article>
+			<a href="/screens/testimonials/lukewalker.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Luke Walker</h3>
+				<p>You Can't Touch a Tradition of Excellence</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/lukewalker.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
 			<a href="/screens/testimonials/jamestravis.html" class="image">
 				<img src="/images/testimonials/jtravis.jpg" alt="" />
 			</a>
@@ -435,9 +447,9 @@ layout: base
 				</ul>
 			</div>
 		</article>
-		<!-- <article>
+		<article>
 			<a href="/screens/testimonials/ryanmalmin.html" class="image">
-				<img src="/images/testimonials/rmalmin.jpg" alt="" />
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
 			</a>
 			<div class="caption">
 				<h3>Ryan Malmin</h3>
@@ -446,7 +458,7 @@ layout: base
 					<li><a class="button small" href="/screens/testimonials/ryanmalmin.html">Read More</a></li>
 				</ul>
 			</div>
-		</article> -->
+		</article>
 		<article>
 			<a href="/screens/testimonials/richardsimonsen.html" class="image">
 				<img src="/images/testimonials/rsimonsen.jpg" alt="" />
