--- a/screens/alumni.html
+++ b/screens/alumni.html
@@ -293,7 +293,7 @@ layout: base
 		</article>
 		<article>
 			<a href="/screens/testimonials/bradwick .html" class="image">
-				<img src="/images/testimonials/placeholder.jpg" alt="" />
+				<img src="/images/testimonials/bwick.jpg" alt="" />
 			</a>
 			<div class="caption">
 				<h3>Brad Wick</h3>
@@ -384,6 +384,18 @@ layout: base
 				<p>Proud of a diverse community united by a common goal</p>
 				<ul class="actions fixed">
 					<li><a class="button small" href="/screens/testimonials/rileymacon.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/lukemullranin.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Luke Mullranin</h3>
+				<p>Go Gophers</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/lukemullranin.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
@@ -532,6 +544,18 @@ layout: base
 			</div>
 		</article>
 		<article>
+			<a href="/screens/testimonials/corynelson.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Cory Nelson</h3>
+				<p>Please don’t take this opportunity away from future Minnesota high school athletes</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/corynelson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
 			<a href="/screens/testimonials/tommccaffrey.html" class="image">
 				<img src="/images/testimonials/tmccaffrey.jpg" alt="" />
 			</a>
@@ -592,6 +616,18 @@ layout: base
 			</div>
 		</article>
 		<article>
+			<a href="/screens/testimonials/markanderson.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Mark Anderson</h3>
+				<p>The original sport</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/markanderson.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
 			<a href="/screens/testimonials/davecasale.html" class="image">
 				<img src="/images/testimonials/dcasale.jpg" alt="" />
 			</a>
@@ -624,6 +660,18 @@ layout: base
 				<p>Life Changing University Experience</p>
 				<ul class="actions fixed">
 					<li><a class="button small" href="/screens/testimonials/andrewbunge.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/markjennings.html" class="image">
+				<img src="/images/testimonials/placeholder.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Mark Jennings</h3>
+				<p>The experiences, friendships, lessons, community reputation, and bonds forged by the University of Minnesota Men's Track and Field program go beyond small line items in a large budget.</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/markjennings.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
@@ -672,6 +720,18 @@ layout: base
 				<p>Let's keep the U's integrity to the world intact.</p>
 				<ul class="actions fixed">
 					<li><a class="button small" href="/screens/testimonials/kevinmoorhead.html">Read More</a></li>
+				</ul>
+			</div>
+		</article>
+		<article>
+			<a href="/screens/testimonials/karlieplace.html" class="image">
+				<img src="/images/testimonials/kplace.jpg" alt="" />
+			</a>
+			<div class="caption">
+				<h3>Karlie Place</h3>
+				<p>Gopher Track and Field opened the door to nearly every opportunity presented to me as a college student.</p>
+				<ul class="actions fixed">
+					<li><a class="button small" href="/screens/testimonials/karlieplace.html">Read More</a></li>
 				</ul>
 			</div>
 		</article>
