add people to spotlight

--- a/screens/testimonials/lauradocherty.html
+++ b/screens/testimonials/lauradocherty.html
@@ -1,6 +1,7 @@
 ---
 title: "#SaveGopherTF Laura Docherty"
-layout: alumni_testimonial
+layout: spotlight_testimonial
+description: "Gopher Alum"
 fullname: "Laura Docherty '14"
 quote: "It’s about a family of athletes that go on to dedicate our whole selves to our craft no matter what area of life we fall into after college."
 image: "/images/testimonials/ldocherty.jpg"
