--- a/screens/testimonials/megansmith.html
+++ b/screens/testimonials/megansmith.html
@@ -1,6 +1,7 @@
 ---
 title: "#SaveGopherTF Megan Smith"
-layout: alumni_testimonial
+layout: spotlight_testimonial
+description: "Gopher Alum"
 fullname: "Megan Smith, '11 Mid-D"
 quote: "The 'M' Never Comes Off"
 image: "/images/testimonials/msmith.jpg"
