--- a/screens/testimonials/sophieschmitz.html
+++ b/screens/testimonials/sophieschmitz.html
@@ -1,6 +1,7 @@
 ---
 title: "#SaveGopherTF Sophie Schmitz"
-layout: athlete_testimonial
+layout: spotlight_testimonial
+description: "Gopher Athlete"
 fullname: "Sophie Schmitz, '21 Mid-D"
 quote: "Dreaming of Excellence"
 image: "/images/testimonials/sschmitz.jpg"
