--- a/screens/testimonials/tatesweeney.html
+++ b/screens/testimonials/tatesweeney.html
@@ -1,6 +1,7 @@
 ---
 title: "#SaveGopherTF Tate Sweeney"
-layout: athlete_testimonial
+layout: spotlight_testimonial
+description: "Gopher Athlete"
 fullname: "Tate Sweeney, '22 Distance/XC"
 quote: "We are Family"
 image: "/images/testimonials/tsweeney.jpg"
