--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@ layout: homepage
 				</div>
 			</article>
 			<article>
+				<a href="/screens/testimonials/tatesweeney.html" class="image">
+					<img src="/images/testimonials/tsweeney.jpg" alt="" />
+				</a>
+				<div class="caption">
+					<h3>Tate Sweeney</h3>
+					<p>We are Family</p>
+					<ul class="actions fixed">
+						<li><a class="button small" href="/screens/testimonials/tatesweeney.html">Read More</a></li>
+					</ul>
+				</div>
+			</article>
+			<article>
 				<a href="/screens/testimonials/hassanmead.html" class="image">
 					<img src="/images/testimonials/hmead.jpg" alt="" />
 				</a>
@@ -93,6 +105,18 @@ layout: homepage
 					<p>This is more than just sports.</p>
 					<ul class="actions fixed">
 						<li><a href="/screens/testimonials/hassanmead.html" class="button small">Read More</a></li>
+					</ul>
+				</div>
+			</article>
+			<article>
+				<a href="/screens/testimonials/sophieschmitz.html" class="image">
+					<img src="/images/testimonials/sschmitz.jpg" alt="" />
+				</a>
+				<div class="caption">
+					<h3>Sophie Schmitz </h3>
+					<p>Dreaming of Excellence </p>
+					<ul class="actions fixed">
+						<li><a class="button small" href="/screens/testimonials/sophieschmitz.html">Read More</a></li>
 					</ul>
 				</div>
 			</article>
@@ -110,6 +134,18 @@ layout: homepage
 				</div>
 			</article>
 			<article>
+				<a href="/screens/testimonials/lauradocherty.html" class="image">
+					<img src="/images/testimonials/ldocherty.jpg" alt="" />
+				</a>
+				<div class="caption">
+					<h3>Laura Docherty</h3>
+					<p>It’s about a family of athletes that go on to dedicate our whole selves to our craft no matter what area of life we fall into after college.</p>
+					<ul class="actions fixed">
+						<li><a class="button small" href="/screens/testimonials/lauradocherty.html">Read More</a></li>
+					</ul>
+				</div>
+			</article>
+			<article>
 				<a href="/screens/testimonials/carsonhoeft.html" class="image">
 					<img src="/images/testimonials/choeft.jpg" alt="" />
 				</a>
@@ -119,6 +155,18 @@ layout: homepage
 					<p>To imagine the University of Minnesota without a Track and Field program disheartens me to the core.</p>
 					<ul class="actions fixed">
 						<li><a href="/screens/testimonials/carsonhoeft.html" class="button small">Read More</a></li>
+					</ul>
+				</div>
+			</article>
+			<article>
+				<a href="/screens/testimonials/megansmith.html" class="image">
+					<img src="/images/testimonials/msmith.jpg" alt="" />
+				</a>
+				<div class="caption">
+					<h3>Megan Smith</h3>
+					<p>The 'M' Never Comes Off</p>
+					<ul class="actions fixed">
+						<li><a class="button small" href="/screens/testimonials/megansmith.html">Read More</a></li>
 					</ul>
 				</div>
 			</article>
