--- a/index.html
+++ b/index.html
@@ -146,15 +146,14 @@ layout: homepage
 				</div>
 			</article>
 			<article>
-				<a href="/screens/testimonials/carsonhoeft.html" class="image">
-					<img src="/images/testimonials/choeft.jpg" alt="" />
+				<a href="/screens/testimonials/adamsteele.html" class="image">
+					<img src="/images/testimonials/asteele.jpg" alt="" />
 				</a>
 				<div class="caption">
-					<h1>Carson Hoeft</h1>
-					<h3>NCAA All-American</h3>
-					<p>To imagine the University of Minnesota without a Track and Field program disheartens me to the core.</p>
+					<h3>Adam Steele</h3>
+					<p>Leaders have been Produced</p>
 					<ul class="actions fixed">
-						<li><a href="/screens/testimonials/carsonhoeft.html" class="button small">Read More</a></li>
+						<li><a class="button small" href="/screens/testimonials/adamsteele.html">Read More</a></li>
 					</ul>
 				</div>
 			</article>
