--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ layout: homepage
 				</a>
 				<div class="caption">
 					<h1>Tate Sweeney</h1>
+					<h3>Track and Field Captain</h3>
 					<p>We are Family</p>
 					<ul class="actions fixed">
 						<li><a class="button small" href="/screens/testimonials/tatesweeney.html">Read More</a></li>
@@ -114,6 +115,7 @@ layout: homepage
 				</a>
 				<div class="caption">
 					<h1>Sophie Schmitz </h1>
+					<h3>Track and Field Captain, State Champion</h3>
 					<p>Dreaming of Excellence </p>
 					<ul class="actions fixed">
 						<li><a class="button small" href="/screens/testimonials/sophieschmitz.html">Read More</a></li>
@@ -139,6 +141,7 @@ layout: homepage
 				</a>
 				<div class="caption">
 					<h1>Laura Docherty</h1>
+					<h3>NCAA All-American, Big Ten Medalist</h3>
 					<p>It’s about a family of athletes that go on to dedicate our whole selves to our craft no matter what area of life we fall into after college.</p>
 					<ul class="actions fixed">
 						<li><a class="button small" href="/screens/testimonials/lauradocherty.html">Read More</a></li>
