--- a/screens/testimonials/sophieschmitz.html
+++ b/screens/testimonials/sophieschmitz.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Sophie Schmitz"
 layout: spotlight_testimonial
-description: "Gopher Athlete"
+description: "Track and Field Captain, State Champion"
 fullname: "Sophie Schmitz, '21 Mid-D"
 quote: "Dreaming of Excellence"
 image: "/images/testimonials/sschmitz.jpg"
