--- a/screens/testimonials/tatesweeney.html
+++ b/screens/testimonials/tatesweeney.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Tate Sweeney"
 layout: spotlight_testimonial
-description: "Gopher Athlete"
+description: "Track and Field Captain"
 fullname: "Tate Sweeney, '22 Distance/XC"
 quote: "We are Family"
 image: "/images/testimonials/tsweeney.jpg"
