--- a/screens/athletes.html
+++ b/screens/athletes.html
@@ -3,7 +3,7 @@ title: "#SaveGopherTF Athletes"
 layout: base
 ---
 <!-- Header -->
-<section class="banner style3 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
+<section class="banner style3 orient-left content-align-left image-position-right">
 	<div class="content">
 		<h1>Current Athletes</h1>
 		<!-- <p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p> -->
