--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ layout: homepage
 				</a>
 				<div class="caption">
 					<h1>Adam Steele</h1>
+					<h3>2003 NCAA Champion 400m, Fastest Man in the World in 2003, 7xAll-American, 6xBig Ten Champion</h3>
 					<p>Leaders have been Produced</p>
 					<ul class="actions fixed">
 						<li><a class="button small" href="/screens/testimonials/adamsteele.html">Read More</a></li>
@@ -166,6 +167,7 @@ layout: homepage
 				</a>
 				<div class="caption">
 					<h1>Megan Smith</h1>
+					<h3>Track and Field Captain</h3>
 					<p>The 'M' Never Comes Off</p>
 					<ul class="actions fixed">
 						<li><a class="button small" href="/screens/testimonials/megansmith.html">Read More</a></li>
