--- a/screens/testimonials/adamsteele.html
+++ b/screens/testimonials/adamsteele.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Adam Steele"
 layout: spotlight_testimonial
-description: "Gopher Alum"
+description: "2003 NCAA Champion 400m, Fastest Man in the World in 2003, 7xAll-American, 6xBig Ten Champion"
 fullname: "Adam Steele, '04 Sprints"
 quote: "Leaders have been Produced"
 image: "/images/testimonials/asteele.jpg"
