--- a/screens/testimonials/megansmith.html
+++ b/screens/testimonials/megansmith.html
@@ -1,7 +1,7 @@
 ---
 title: "#SaveGopherTF Megan Smith"
 layout: spotlight_testimonial
-description: "Gopher Alum"
+description: "Track and Field Captain"
 fullname: "Megan Smith, '11 Mid-D"
 quote: "The 'M' Never Comes Off"
 image: "/images/testimonials/msmith.jpg"
